# the_path_to_glory

./: .env  .gitignore  Dockerfile  README.md  app.py  classes.py  docker-compose-ci.yaml  docker-compose.yaml  equipment.py  pyproject.toml  requirements.txt  skills.py  test_classes.py  uml_diagramm.mdj  unit.py  wsgi.py
.github/workflows/: action.yaml
data/: equipment.json  units.json
logic/: arena.py  classes.py  equipment.py  skills.py  unit.py
project/: config.py  constants.py  constats.py  container.py  create_units.py  functions.py  helpers.py
project/dao/: user.py
project/dao/models/: user.py
project/data/: equipment.json  units.json
project/logic/: arena.py  classes.py  data_for_front.py  equipment.py  skills.py  unit.py
project/service/: user.py
project/static/: leaderboards.css  nicepage.css  start_game.css
project/static/start_game/: nicepage.css  start_game.css
project/templates/: fight.html  hero_choosing.html  leaderboards.html  sign_in.html  sign_up.html  start_game.html  test.html
project/views/: auth.py  choose_enemy.py  choose_hero.py  fight.py  leaderboards.py
project/views/fight/: choose_enemy.py  choose_hero.py  fight.py
project/views/user/: __init__.py  auth.py
templates/: fight.html  hero_choosing.html
