[tool.poetry]
name = "the-path-to-glory"
version = "0.1.0"
description = ""
authors = ["gmoroz <12345hasek@gmail.com>"]
readme = "README.md"
packages = [{include = "the_path_to_glory"}]

[tool.poetry.dependencies]
python = "^3.10"
aniso8601 = "9.0.1"
attrs = "22.1.0"
bcrypt = "4.0.1"
cachelib = "0.9.0"
click = "8.1.3"
colorama = "0.4.6"
flask = "2.2.2"
flask-bcrypt = "1.0.1"
flask-cors = "3.0.10"
flask-restx = "1.0.3"
flask-session = "0.4.0"
flask-sqlalchemy = "3.0.2"
greenlet = "2.0.1"
gunicorn = "20.1.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema = "4.17.3"
markupsafe = "2.1.1"
marshmallow = "3.19.0"
marshmallow-dataclass = "8.5.10"
mypy-extensions = "0.4.3"
packaging = "22.0"
psycopg2-binary = "2.9.5"
pyjwt = "2.6.0"
pyrsistent = "0.19.2"
python-dotenv = "0.21.0"
pytz = "2022.7"
six = "1.16.0"
sqlalchemy = "1.4.45"
typing-inspect = "0.8.0"
typing-extensions = "4.4.0"
werkzeug = "2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
